--- a/client/.env.dist
+++ b/client/.env.dist
@@ -1,3 +1,3 @@
-REACT_APP_API_URL= 
-REACT_APP_TOLGEE_API_URL=
-REACT_APP_TOLGEE_API_KEY=
+REACT_APP_API_URL=https://svsocial.vercel.app/api
+REACT_APP_TOLGEE_API_URL=https://app.tolgee.io
+REACT_APP_TOLGEE_API_KEY=tgpak_giztsn27nbqtanlcnjxgoy3hgrrhcolkgeyxg4rznvsxi3lvna
